--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@ h1 {
     <p>Am Donnerstag nahmen wir an einem Scrum-Workshop teil, in dem wir gelernt haben, wie agile Teams bei SAP arbeiten.</p>
     <p>Am Freitag präsentierte ich mein eigenes kleines Projekt vor dem Team. Es war eine spannende Woche mit vielen Eindrücken.</p>
     <div class="image-gallery">
-      <img src="bilder/bild1.jpg" alt="Bild 1" onclick="showImage(this.src)" />
-      <img src="bilder/bild2.jpg" alt="Bild 2" onclick="showImage(this.src)" />
-      <img src="bilder/bild3.jpg" alt="Bild 3" onclick="showImage(this.src)" />
-      <img src="bilder/bild4.jpg" alt="Bild 4" onclick="showImage(this.src)" />
+      <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz" onclick="showImage(this.src)" />
+      <img src="Githubsetup.png" alt="Githubsetup" onclick="showImage(this.src)" />
+      <img src="Essen.jpeg" alt="Essen" onclick="showImage(this.src)" />
+      <img src="eingang.jpeg" alt="eingang" onclick="showImage(this.src)" />
       <img src="bilder/bild5.jpg" alt="Bild 5" onclick="showImage(this.src)" />
       <img src="bilder/bild6.jpg" alt="Bild 6" onclick="showImage(this.src)" />
     </div>
