--- a/index.html
+++ b/index.html
@@ -6,179 +6,245 @@
 <script type="module" src="https://sap.github.io/ui5-webcomponents/assets/bundle.esm.js"></script>
 <style>
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+margin: 0;
+font-family: 'Segoe UI', sans-serif;
+background-color: #f4f6f8;
+color: #222;
 }
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  margin-top: 2rem;
-  animation: fadeIn 1s ease-in;
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 2rem;
+padding: 2rem;
+background: #ffffff;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 .header img {
-  height: 80px;
+height: 60px;
 }
 h1 {
-  font-size: 2rem;
-  margin: 0;
+font-size: 2rem;
+margin: 0;
+color: #0a3d62;
 }
 .button-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin: 4rem;
-  justify-content: center;
-  align-items: center;
-  animation: fadeIn 1s ease-in;
+display: flex;
+flex-wrap: wrap;
+gap: 1.5rem;
+margin: 3rem auto;
+justify-content: center;
 }
 .tag-button {
-  border-radius: 2rem;
-  padding: 0.7rem 2rem;
-  font-weight: bold;
-  border: none;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+border-radius: 2rem;
+padding: 0.7rem 2rem;
+font-weight: bold;
+border: none;
+cursor: pointer;
+transition: all 0.3s ease;
+font-size: 1rem;
 }
 .tag-button:hover {
-  transform: scale(1.1);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+transform: scale(1.05);
+box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
-.montag { background-color: #ff3b3b; color: white; }
-.dienstag { background-color: #ffe162; color: black; }
-.mittwoch { background-color: #29a8ff; color: black; }
-.donnerstag { background-color: #17c964; color: black; }
-.freitag { background-color: #ff944d; color: black; }
+.montag { background-color: #ff6b6b; color: white; }
+.dienstag { background-color: #ffe162; color: #333; }
+.mittwoch { background-color: #48dbfb; color: #000; }
+.donnerstag { background-color: #1dd1a1; color: white; }
+.freitag { background-color: #ff9f43; color: white; }
 .ausbildung {
-  background: linear-gradient(to right, #000000, #666666);
-  color: white;
-  border-radius: 2rem;
-  padding: 1rem 2.5rem;
-  font-weight: bold;
-  border: none;
+background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+color: white;
 }
+.ui5 { background-color: #0a3d62; color: white; }
 .info-text {
-  display: none;
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 2rem auto;
-  max-width: 800px;
-  animation: slideIn 0.5s ease-out forwards;
+display: none;
+background: #fff;
+margin: 2rem auto;
+max-width: 900px;
+border-radius: 10px;
+padding: 2rem;
+box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+animation: fadeIn 0.5s ease-in-out;
 }
-.visible {
-  display: block;
+.info-text h2 {
+color: #0a3d62;
+margin-bottom: 1rem;
 }
-.hidden {
-  display: none;
+.info-text ul {
+text-align: left;
+margin: 0 auto 1rem;
+padding-left: 1.5rem;
 }
+.info-text p {
+line-height: 1.6;
+margin-bottom: 1rem;
+}
+.visible { display: block; }
+.hidden { display: none; }
 .zurueck-wrapper {
-  text-align: center;
-  margin-top: 2rem;
+text-align: center;
+margin-top: 2rem;
 }
 .zurueck-button {
-  background-color: #3f51b5;
-  color: white;
-  border-radius: 2rem;
-  padding: 0.7rem 2rem;
-  font-weight: bold;
-  border: none;
+background-color: #3f51b5;
+color: white;
+border-radius: 2rem;
+padding: 0.7rem 2rem;
+font-weight: bold;
+border: none;
+font-size: 1rem;
 }
-.image-gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-  margin-top: 2rem;
+.gallery {
+display: flex;
+flex-wrap: wrap;
+gap: 1rem;
+justify-content: center;
+margin-top: 1.5rem;
 }
-.image-gallery img {
-  width: 150px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transition: transform 0.3s ease;
+.gallery img {
+width: 150px;
+height: 100px;
+object-fit: cover;
+border-radius: 8px;
+cursor: pointer;
+transition: transform 0.3s ease;
 }
-.image-gallery img:hover {
-  transform: scale(1.1);
+.gallery img:hover {
+transform: scale(1.1);
 }
-.fullscreen-image {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
+.fullscreen {
+position: fixed;
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+background-color: rgba(0, 0, 0, 0.8);
+display: none;
+align-items: center;
+justify-content: center;
+z-index: 999;
 }
-.fullscreen-image img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 1rem;
-}
-.fullscreen-image ui5-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1000;
+.fullscreen img {
+max-width: 90%;
+max-height: 90%;
+border-radius: 10px;
 }
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-@keyframes slideIn {
-  from { transform: translateX(100px); opacity: 0; }
-  to { transform: translateX(0); opacity: 1; }
+from { opacity: 0; transform: translateY(20px); }
+to { opacity: 1; transform: translateY(0); }
 }
 </style>
 </head>
 <body>
 <div class="header">
-  <img src="sapui5.png" alt="UI5 Logo" />
-  <h1>Praktikum</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
+<img src="sapui5.png" alt="UI5 Logo" />
+<h1>Praktikum bei </h1>
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
 </div>
 
 <div class="button-wrapper" id="buttonArea">
-  <ui5-button class="tag-button montag" data-target="montag-text">Wochenbericht</ui5-button>
-  <ui5-button class="tag-button dienstag" data-target="dienstag-text">Fachinformatiker</ui5-button>
-  <ui5-button class="tag-button mittwoch" data-target="mittwoch-text">Scrum</ui5-button>
-  <ui5-button class="tag-button donnerstag" data-target="donnerstag-text">Aufgabenbereiche</ui5-button>
-  <ui5-button class="tag-button freitag" data-target="freitag-text">Fazit</ui5-button>
-  <ui5-button class="ausbildung" data-target="ausbildung-text">Ausbildungsmöglichkeiten</ui5-button>
+<ui5-button class="tag-button montag" data-target="montag-text">📅 Wochenbericht</ui5-button>
+<ui5-button class="tag-button dienstag" data-target="dienstag-text">💻 Fachinformatiker</ui5-button>
+<ui5-button class="tag-button mittwoch" data-target="mittwoch-text">⚙️ Scrum</ui5-button>
+<ui5-button class="tag-button donnerstag" data-target="donnerstag-text">🛠️ Aufgabenbereiche</ui5-button>
+<ui5-button class="tag-button freitag" data-target="freitag-text">✅ Fazit</ui5-button>
+<ui5-button class="tag-button ausbildung" data-target="ausbildung-text">🎓 Ausbildungsmöglichkeiten</ui5-button>
+<ui5-button class="tag-button ui5" data-target="ui5-text">
+<img src="sapui5.png" alt="UI5 Logo" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Was ist UI5?
+</ui5-button>
 </div>
 
 <div id="infoTexts">
-  <div id="montag-text" class="info-text">
-    <h2>Wochenbericht</h2>
-    <p>Am Montag habe ich das Unternehmen SAP kennengelernt. Ich habe meinen Arbeitsplatz eingerichtet und meinen Laptop erhalten.</p>
-    <p>Am Dienstag durfte ich die IT-Abteilung kennenlernen und erste Aufgaben bearbeiten.</p>
-    <p>Am Mittwoch habe ich einfache Webseiten mit HTML und CSS programmiert.</p>
-    <p>Am Donnerstag nahmen wir an einem Scrum-Workshop teil, in dem wir gelernt haben, wie agile Teams bei SAP arbeiten.</p>
-    <p>Am Freitag präsentierte ich mein eigenes kleines Projekt vor dem Team. Es war eine spannende Woche mit vielen Eindrücken.</p>
-    <div class="image-gallery">
-      <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz" onclick="showImage(this.src)" />
-      <img src="Githubsetup.png" alt="Githubsetup" onclick="showImage(this.src)" />
-      <img src="Essen.jpeg" alt="Essen" onclick="showImage(this.src)" />
-      <img src="eingang.jpeg" alt="eingang" onclick="showImage(this.src)" />
-      <img src="bilder/bild5.jpg" alt="Bild 5" onclick="showImage(this.src)" />
-      <img src="bilder/bild6.jpg" alt="Bild 6" onclick="showImage(this.src)" />
-    </div>
-  </div>
+<div id="montag-text" class="info-text">
+<h2>Wochenbericht</h2>
+<ul>
+<li><strong>Montag:</strong> Einführung, Arbeitsplatz einrichten</li>
+<li><strong>Dienstag:</strong> IT-Abteilung kennenlernen</li>
+<li><strong>Mittwoch:</strong> HTML & CSS-Projekt</li>
+<li><strong>Donnerstag:</strong> Scrum-Workshop</li>
+<li><strong>Freitag:</strong> Projektpräsentation</li>
+</ul>
+<div class="gallery">
+<img src="bild1.jpg" onclick="showFullscreen(this.src)" alt="Bild 1" />
+<img src="bild2.jpg" onclick="showFullscreen(this.src)" alt="Bild 2" />
+<img src="bild3.jpg" onclick="showFullscreen(this.src)" alt="Bild 3" />
+<img src="bild4.jpg" onclick="showFullscreen(this.src)" alt="Bild 4" />
+<img src="bild5.jpg" onclick="showFullscreen(this.src)" alt="Bild 5" />
+<img src="bild6.jpg" onclick="showFullscreen(this.src)" alt="Bild 6" />
+</div>
+</div>
 
-  <div class="fullscreen-image" id="fullscreenImage">
-    <ui5-button onclick="hideImage()">Zurück</ui5-button>
-    <img id="fullscreenImg" src="" alt="Großansicht" />
-  </div>
+<div id="dienstag-text" class="info-text">
+<h2>Fachinformatiker – Ein Beruf mit Zukunft</h2>
+<p>Die Ausbildung zum Fachinformatiker bei SAP ist sehr beliebt:</p>
+<ul>
+<li>Ausbildungsdauer: 3 Jahre (duales System)</li>
+<li>Fachrichtungen: Systemintegration und Anwendungsentwicklung</li>
+<li>Gehalt: 1. Jahr ca. 1.000 €, 2. Jahr ca. 1.100 €, 3. Jahr ca. 1.200 €</li>
+<li>Berufsschule + Praxis im Unternehmen</li>
+</ul>
+</div>
 
-  <!-- Die restlichen Textbereiche bleiben unverändert -->
+<div id="mittwoch-text" class="info-text">
+<h2>Scrum – Agile Softwareentwicklung</h2>
+<p>Scrum ist eine Methode, wie Teams bei SAP zusammenarbeiten:</p>
+<ul>
+<li><strong>Sprint:</strong> Ein Zeitraum (z. B. 2 Wochen), in dem ein Ziel erreicht wird</li>
+<li><strong>Daily Standup:</strong> Kurzes tägliches Team-Meeting</li>
+<li><strong>Scrum Master:</strong> Achtet auf den Prozess</li>
+<li><strong>Product Owner:</strong> Verantwortlich für die Anforderungen</li>
+<li><strong>Team:</strong> Entwickelt und testet Lösungen</li>
+</ul>
+</div>
+
+<div id="donnerstag-text" class="info-text">
+<h2>Aufgabenbereiche</h2>
+<ul>
+<li>Programmieren und Software entwickeln</li>
+<li>Fehler suchen und Lösungen finden</li>
+<li>Systeme installieren, einrichten und betreuen</li>
+<li>Mit Kunden kommunizieren und beraten</li>
+</ul>
+</div>
+
+<div id="freitag-text" class="info-text">
+<h2>Fazit</h2>
+<p>Mein Praktikum war sehr spannend. Ich habe viel über Technik, Teamarbeit und moderne Arbeitsweisen gelernt. Besonders cool war, dass ich kleine Aufgaben selbst machen durfte. SAP ist ein super Ausbildungsbetrieb!</p>
+</div>
+
+<div id="ausbildung-text" class="info-text">
+<h2>Ausbildungsmöglichkeiten bei SAP</h2>
+<p>Bei SAP kann man viele Berufe lernen – besonders im IT-Bereich:</p>
+<ul>
+<li>Fachinformatiker/in für Anwendungsentwicklung</li>
+<li>Fachinformatiker/in für Systemintegration</li>
+<li>Kaufleute für Digitalisierungsmanagement</li>
+<li>Duale Studiengänge (z. B. Wirtschaftsinformatik)</li>
+</ul>
+<p>Es gibt moderne Arbeitsplätze, coole Projekte und viele Lernmöglichkeiten!</p>
+</div>
+
+<div id="ui5-text" class="info-text">
+<h2>Was ist UI5?</h2>
+<p><strong>UI5</strong> ist ein modernes Web-Framework, das von SAP entwickelt wurde. Es wird genutzt, um professionelle und responsive Benutzeroberflächen für Webanwendungen zu erstellen.</p>
+<ul>
+<li>Basierend auf Webstandards wie HTML5, CSS und JavaScript</li>
+<li>Unterstützt moderne Designprinzipien wie SAP Fiori</li>
+<li>Kommt in vielen SAP-Produkten und -Projekten zum Einsatz</li>
+<li>UI5 Web Components sind eine leichtgewichtige Variante für moderne Webseiten</li>
+</ul>
+<p>Mit UI5 Web Components kannst du schnell schicke Buttons, Layouts und Dialoge erstellen – wie in dieser Präsentation!</p>
+</div>
 </div>
 
 <div class="zurueck-wrapper hidden" id="zurueckWrapper">
-  <ui5-button class="zurueck-button" id="zurueckButton">Zurück</ui5-button>
+<ui5-button class="zurueck-button" id="zurueckButton">Zurück</ui5-button>
+</div>
+
+<div id="fullscreenContainer" class="fullscreen" onclick="this.style.display='none'">
+<img id="fullscreenImage" src="" alt="Vollbild" />
 </div>
 
 <script>
@@ -188,32 +254,25 @@ const buttonWrapper = document.getElementById("buttonArea");
 const zurueckWrapper = document.getElementById("zurueckWrapper");
 const zurueckButton = document.getElementById("zurueckButton");
 
-buttons.forEach((button) => {
-  button.addEventListener("click", () => {
-    buttonWrapper.classList.add("hidden");
-    zurueckWrapper.classList.remove("hidden");
-    allTexts.forEach((txt) => txt.classList.remove("visible"));
-    const targetId = button.getAttribute("data-target");
-    const textDiv = document.getElementById(targetId);
-    if (textDiv) {
-      textDiv.classList.add("visible");
-    }
-  });
+buttons.forEach(button => {
+button.addEventListener("click", () => {
+buttonWrapper.classList.add("hidden");
+zurueckWrapper.classList.remove("hidden");
+allTexts.forEach(t => t.classList.remove("visible"));
+document.getElementById(button.getAttribute("data-target")).classList.add("visible");
+});
 });
 
 zurueckButton.addEventListener("click", () => {
-  allTexts.forEach((txt) => txt.classList.remove("visible"));
-  buttonWrapper.classList.remove("hidden");
-  zurueckWrapper.classList.add("hidden");
+allTexts.forEach(t => t.classList.remove("visible"));
+buttonWrapper.classList.remove("hidden");
+zurueckWrapper.classList.add("hidden");
 });
 
-function showImage(src) {
-  document.getElementById("fullscreenImg").src = src;
-  document.getElementById("fullscreenImage").style.display = "flex";
-}
-
-function hideImage() {
-  document.getElementById("fullscreenImage").style.display = "none";
+function showFullscreen(src) {
+const fullscreen = document.getElementById("fullscreenContainer");
+document.getElementById("fullscreenImage").src = src;
+fullscreen.style.display = "flex";
 }
 </script>
 </body>
