Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@ to { opacity: 1; transform: translateY(0); }
 <li><strong>Freitag:</strong> Projektpräsentation</li>
 </ul>
 <div class="gallery">
-<img src="bild1.jpg" onclick="showFullscreen(this.src)" alt="Bild 1" />
-<img src="bild2.jpg" onclick="showFullscreen(this.src)" alt="Bild 2" />
-<img src="bild3.jpg" onclick="showFullscreen(this.src)" alt="Bild 3" />
-<img src="bild4.jpg" onclick="showFullscreen(this.src)" alt="Bild 4" />
-<img src="bild5.jpg" onclick="showFullscreen(this.src)" alt="Bild 5" />
-<img src="bild6.jpg" onclick="showFullscreen(this.src)" alt="Bild 6" />
+<img src="eingang.jpeg" onclick="showFullscreen(this.src)" alt="eingang" />
+<img src="IMG_0776.jpeg" onclick="showFullscreen(this.src)" alt="Arbeitsplatz" />
+<img src="Githubsetup.png" onclick="showFullscreen(this.src)" alt="Githubsetup" />
+<img src="esenn.jpeg" onclick="showFullscreen(this.src)" alt="essen" />
+<img src="arbeiten.jpg" onclick="showFullscreen(this.src)" alt="arbeiten" />
+<img src="vscode.png" onclick="showFullscreen(this.src)" alt="vscode" />
 </div>
 </div>
 
