--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@ to { opacity: 1; transform: translateY(0); }
 <h2>Wochenbericht</h2>
 <ul>
 <li><strong>Montag:</strong> Einführung, Arbeitsplatz einrichten</li>
-<li><strong>Dienstag:</strong> IT-Abteilung kennenlernen</li>
+<li><strong>Dienstag:</strong>  ui5-webcomponents kennengelernt und angefangen</li>
 <li><strong>Mittwoch:</strong> HTML & CSS-Projekt</li>
-<li><strong>Donnerstag:</strong> Scrum-Workshop</li>
-<li><strong>Freitag:</strong> Projektpräsentation</li>
+<li><strong>Donnerstag:</strong> Ich habe  struktur und efekte hinzugefügt </li>
+<li><strong>Freitag:</strong> Abschluss letzter Tag und verabschiedung </li>
 </ul>
 <div class="gallery">
 <img src="eingang.jpeg" onclick="showFullscreen(this.src)" alt="eingang" />
