--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ to { opacity: 1; transform: translateY(0); }
 <li><strong>Montag:</strong> Einführung, Arbeitsplatz einrichten</li>
 <li><strong>Dienstag:</strong>  ui5-webcomponents kennengelernt und angefangen</li>
 <li><strong>Mittwoch:</strong> HTML & CSS-Projekt</li>
-<li><strong>Donnerstag:</strong> Ich habe  struktur und efekte hinzugefügt </li>
+<li><strong>Donnerstag:</strong> Ich habe  Struktur und Efekte hinzugefügt </li>
 <li><strong>Freitag:</strong> Abschluss letzter Tag und Verabschiedung </li>
 </ul>
 <div class="gallery">
