feat: add description for Product Manager role in Scrum section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
       <li><strong>Sprint:</strong> Ziel in festem Zeitraum</li>
       <li><strong>Daily:</strong> kurzes tägliches Meeting</li>
       <li><strong>Scrum Master:</strong> achtet auf Regeln</li>
+      <li><strong>Produktmaneger:</strong> übernimmt Verantwortung + spricht mit den Kunden</li>
     </ul>
   </div>
 
