--- a/index.html
+++ b/index.html
@@ -244,50 +244,112 @@
   <div id="dienstag-text" class="info-text">
     <h2>Fachinformatiker – Ein Beruf mit Zukunft</h2>
     <ul>
-      <li>Ausbildungsdauer: 3 Jahre</li>
-      <li>Fachrichtungen: Systemintegration & Anwendungsentwicklung</li>
-      <li>Berufsschule + Praxis im Unternehmen</li>
+      <h1>Fachinformatiker – Ein Beruf mit Zukunft</h1>
+    <p>Als Fachinformatiker arbeitest du mit Computern, Netzwerken und Software. Du kannst zwischen zwei Fachrichtungen wählen:</p>
+
+    <h2>Systemintegration</h2>
+    <ul>
+        <li>Einrichten von Computern und Netzwerken</li>
+        <li>Installation und Konfiguration von Hard- und Software</li>
+        <li>Fehlerbehebung und Lösung von IT-Problemen</li>
+        <li>Netzwerkmanagement und Sicherheit gewährleisten</li>
+        <li>Unterstützung bei der Nutzung von IT-Systemen in Unternehmen</li>
+    </ul>
+
+    <h2>Anwendungsentwicklung</h2>
+    <ul>
+        <li>Programmierung von Webseiten, Software und Apps</li>
+        <li>Entwicklung von Backend- und Frontend-Lösungen</li>
+        <li>Erstellen von Datenbanken und deren Verwaltung</li>
+        <li>Testen und Optimieren von Anwendungen</li>
+        <li>Arbeiten mit verschiedenen Programmiersprachen (z. B. Java, C#, Python)</li>
+        <li>Implementierung neuer Features und Funktionen</li>
+    </ul>
+
     </ul>
   </div>
 
   <div id="mittwoch-text" class="info-text">
-    <h2>Scrum – Agile Softwareentwicklung</h2>
+  </style>
+</head>
+<body>
+    <h1>Scrum – Methode zur Softwareentwicklung</h1>
+
+    <p>Scrum ist eine Methode zur Softwareentwicklung im Team. Man arbeitet in kleinen Schritten und tauscht sich regelmäßig aus.</p>
+
+    <h2>Wichtige Begriffe:</h2>
     <ul>
-      <li><strong>Sprint:</strong> Ziel in festem Zeitraum</li>
-      <li><strong>Daily:</strong> kurzes tägliches Meeting</li>
-      <li><strong>Scrum Master:</strong> achtet auf Regeln</li>
-      <li><strong>Produktmaneger:</strong> übernimmt Verantwortung + spricht mit den Kunden</li>
+        <li><strong>Sprint:</strong> 1–2 Wochen, um ein Ziel zu erreichen</li>
+        <li><strong>Daily:</strong> Tägliche Kurzbesprechung</li>
+        <li><strong>Scrum Master:</strong> Unterstützt das Team bei der Zusammenarbeit</li>
+        <li><strong>Product Owner:</strong> Plant Aufgaben und spricht mit den Kunden</li>
     </ul>
-  </div>
+</body>
+</html>
 
   <div id="donnerstag-text" class="info-text">
-    <h2>Aufgabenbereiche</h2>
+  </style>
+</head>
+<body>
+    <h1>Aufgaben als Fachinformatiker</h1>
+
     <ul>
-      <li>Software entwickeln & testen</li>
-      <li>Systeme einrichten & betreuen</li>
-      <li>Kunden beraten</li>
+        <li>Programme schreiben und testen</li>
+        <li>Computer und Netzwerke einrichten</li>
+        <li>Kollegen und Kunden bei Technikproblemen helfen</li>
+        <li>Systeme aktuell, sicher und funktionsfähig halten</li>
     </ul>
-  </div>
+</body>
+</html>
 
   <div id="freitag-text" class="info-text">
-    <h2>Fazit</h2>
-    <p>Ich habe sehr viel gelernt und durfte sogar selbst etwas programmieren. SAP ist ein cooler Ausbildungsbetrieb!</p>
-  </div>
+  </style>
+</head>
+<body>
+    <h1>Mein Fazit</h1>
+
+    <ul>
+        <li>Viel gelernt (z. B. HTML und CSS)</li>
+        <li>Eigene Webseite programmiert</li>
+        <li>Team bei SAP war sehr freundlich</li>
+        <li>IT-Beruf oder Ausbildung bei SAP gut vorstellbar</li>
+    </ul>
+</body>
+</html>
 
   <div id="ausbildung-text" class="info-text">
-    <h2>Ausbildungsmöglichkeiten bei SAP</h2>
-    <ul>
-      <li>Fachinformatiker/in</li>
-      <li>Kaufleute für Digitalisierungsmanagement</li>
-      <li>Duales Studium</li>
-    </ul>
-  </div>
+  </head>
+  <body>
+      <h1>Ausbildung Fachinformatiker</h1>
+      
+      <h2>Ausbildungsdetails</h2>
+      <p><strong>Dauer:</strong> 3 Jahre (Start meist im September)</p>
+      <p><strong>Ausbildungsart:</strong> Duale Ausbildung (Berufsschule + Arbeit im Betrieb)</p>
+  
+      <h2>Gehalt (Beispiel SAP)</h2>
+      <ul>
+          <li><strong>1. Jahr:</strong> ca. 1.550 €</li>
+          <li><strong>2. Jahr:</strong> ca. 1.650 €</li>
+          <li><strong>3. Jahr:</strong> ca. 2.250 €</li>
+      </ul>
+    </body>
+    </html>
 
   <div id="ui5-text" class="info-text">
-    <h2>Was ist UI5?</h2>
-    <p>Ein modernes Web-Framework von SAP für coole Web-Oberflächen. Läuft mit HTML, CSS & JS.</p>
-  </div>
-</div>
+  </style>
+</head>
+<body>
+    <h1>Werkzeug von SAP für Webseiten und Apps</h1>
+
+    <ul>
+        <li>Verwendet HTML, CSS und JavaScript</li>
+        <li>Viele fertige Elemente (z. B. Buttons, Kalender)</li>
+        <li>Wird von Firmen für moderne Programme genutzt</li>
+    </ul>
+</body>
+</html>
+
+  </div>  
 
 <!-- HACKER CANVAS -->
 <div class="matrix">
